--- a/index.html
+++ b/index.html
@@ -14,84 +14,118 @@
     />
   </head>
   <body>
-    <header class=" flex max-w-[1240px] mx-auto items-center justify-around ">
-      <div class=" flex items-center justify-center">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          class="feather feather-map-pin"
-        >
-          <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
-          <circle cx="12" cy="10" r="3"></circle>
-        </svg>
-        <p class=" mx-2">Högseröd 531<br />241-62 Löberöd</p>
-      </div>
-      <div class=" flex items-center justify-center">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          class="feather feather-phone"
-        >
-          <path
-            d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"
-          ></path>
-        </svg>
-        <p class=" mx-2">+46702060923</p>
-      </div>
-      <div class=" flex items-center justify-center">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          class="feather feather-mail"
-        >
-          <path
-            d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
-          ></path>
-          <polyline points="22,6 12,13 2,6"></polyline>
-        </svg>
-        <p class=" mx-2">info@diagtech.se</p>
-      </div>
-    </header>
+   
     <navbar
-      class="flex justify-between items-center max-w-[1240px] mx-auto my-4"
+      class=" fixed left-0 top-0 w-full z-10 ease-in duration-300"
     >
-      <div>Logo</div>
-      <div>
-        <ul class="flex justify-around items-center ">
-          <li class="mx-2">hem</li>
-          <li class="mx-2">om oss</li>
-          <li class="mx-2">Portfolio</li>
-          <li class="mx-2">Kontakt</li>
+      
+      <div class=" text-gray-400 flex max-w-[1240px] m-auto justify-between items-center p-6">
+        <div class=" font-bold text-xl">DiagTech-Webb</div>
+        <ul class=" hidden sm:flex justify-around items-center">
+          <li class="mx-2 uppercase">hem</li>
+          <li class="mx-2 uppercase">om oss</li>
+          <li class="mx-2 uppercase">Portfolio</li>
+          <li class="mx-2 uppercase">Kontakt</li>
         </ul>
+        <!--Mobile menu-->
+        <div class=" block sm:hidden z-10 cursor-pointer" id="menu-button">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="feather feather-menu"
+          >
+            <line x1="3" y1="12" x2="21" y2="12"></line>
+            <line x1="3" y1="6" x2="21" y2="6"></line>
+            <line x1="3" y1="18" x2="21" y2="18"></line>
+          </svg>
+        </div>
+        <div class=" flex absolute top-0 left-[-100%] right-0 bottom-0 justify-center items-center w-full h-screen bg-black/90 text-center ease-in duration-300" id="menu">
+            <ul>
+                <li class=" p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase">hem</li>
+                <li class=" p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase">om oss</li>
+                <li class=" p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase">Portfolio</li>
+                <li class=" p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase">Kontakt</li>
+              </ul>
+        </div>
       </div>
     </navbar>
-    <main class=" flex items-center justify-center h-screen bg-fixed bg-center bg-cover custom-img">
-      <div class=" absolute top-0 left-0 right-0 bottom-0 bg-black/70 z-[2]"></div>
-      <div class=" p-5 text-white z-[2] ml-[-10rem] mt-[10rem]">
-        <h1 class=" text-5xl font-bold">DiagTech</h1>
-        <h2 class=" py-5 text-xl">Webbutveckling</h2>
+    <main
+      class="flex items-center justify-center h-screen bg-fixed bg-center bg-cover custom-img w-full"
+    >
+      <div
+        class="absolute top-0 left-0 right-0 bottom-0 bg-black/70 z-[2]"
+      ></div>
+      <div class="p-5 text-white z-[2] ml-[-8rem] mt-[18rem]">
+        <h1 class="text-5xl sm:text-7xl font-bold p-1">DiagTech</h1>
+        <h2 class="py-5 text-2xl p-1">Webbutveckling</h2>
       </div>
     </main>
+    <footer class=" sm:flex max-w-[1240px] mx-auto items-center justify-around h-16">
+        <div class="flex items-center justify-center">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="feather feather-map-pin"
+          >
+            <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
+            <circle cx="12" cy="10" r="3"></circle>
+          </svg>
+          <p class="mx-2">Högseröd 531<br />241-62 Löberöd</p>
+        </div>
+        <div class="flex items-center justify-center">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="feather feather-phone"
+          >
+            <path
+              d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"
+            ></path>
+          </svg>
+          <p class="mx-2">+46702060923</p>
+        </div>
+        <div class="flex items-center justify-center">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="feather feather-mail"
+          >
+            <path
+              d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
+            ></path>
+            <polyline points="22,6 12,13 2,6"></polyline>
+          </svg>
+          <p class="mx-2">info@diagtech.se</p>
+        </div>
+    </footer>
+    <script src="script.js"></script>
   </body>
 </html>
