--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
    
     <navbar
       class=" fixed left-0 top-0 w-full z-10 ease-in duration-300"
+      id="navbar"
     >
       
-      <div class=" text-gray-400 flex max-w-[1240px] m-auto justify-between items-center p-6">
+      <div class=" text-gray-500 flex max-w-[1240px] m-auto justify-between items-center p-6">
         <div class=" font-bold text-xl">DiagTech-Webb</div>
         <ul class=" hidden sm:flex justify-around items-center">
           <li class="mx-2 uppercase">hem</li>
@@ -67,7 +68,10 @@
         <h2 class="py-5 text-2xl p-1">Webbutveckling</h2>
       </div>
     </main>
-    <footer class=" sm:flex max-w-[1240px] mx-auto items-center justify-around h-16">
+    <section id="portfolio" class=" max-w-[1240px] h-screen">
+
+    </section>
+    <footer class=" sm:flex max-w-[1240px] mx-auto items-center justify-around h-20">
         <div class="flex items-center justify-center">
           <svg
             xmlns="http://www.w3.org/2000/svg"
