Added about section

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
       id="navbar"
     >
       
-      <div class=" text-gray-500 flex max-w-[1240px] m-auto justify-between items-center p-6">
+      <div class=" text-gray-300 flex max-w-[1240px] m-auto justify-between items-center p-6" id="nav-text">
         <div class=" font-bold text-xl">DiagTech-Webb</div>
         <ul class=" hidden sm:flex justify-around items-center">
           <li class="mx-2 uppercase">hem</li>
           <li class="mx-2 uppercase">om oss</li>
+          <li class="mx-2 uppercase">Tjänster</li>
           <li class="mx-2 uppercase">Portfolio</li>
           <li class="mx-2 uppercase">Kontakt</li>
         </ul>
@@ -51,6 +52,7 @@
             <ul>
                 <li class=" p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase">hem</li>
                 <li class=" p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase">om oss</li>
+                <li class=" p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase">Tjänster</li>
                 <li class=" p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase">Portfolio</li>
                 <li class=" p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase">Kontakt</li>
               </ul>
@@ -63,11 +65,24 @@
       <div
         class="absolute top-0 left-0 right-0 bottom-0 bg-black/70 z-[2]"
       ></div>
-      <div class="p-5 text-white z-[2] ml-[-8rem] mt-[18rem]">
+      <div class="p-5 text-white z-[2] ml-[-1rem] mt-[12rem] sm:ml-[-9rem] md:ml-[-18rem]">
         <h1 class="text-5xl sm:text-7xl font-bold p-1">DiagTech</h1>
         <h2 class="py-5 text-2xl p-1">Webbutveckling</h2>
+        <p>Webbyrå med fokus på webbutveckling,</p>
+        <p>SEO, hosting, förvaltning och support.</p>
       </div>
     </main>
+    <section id="about" class=" w-full h-screen flex justify-center items-center">
+        <div class=" w-[1240px] h-[700px]  shadow-2xl bg-fuchsia-50 sm:m-2">
+            <div class=" w-full h-[320px] bg-center bg-cover card-img ">
+                
+            </div>
+            <div>
+                <h2 class=" p-4 text-3xl font-bold uppercase text-gray-600">Vilka är vi.</h2>
+                <p class=" p-4">DiagTech-Webbutveckling är ett ny startad företag av personer som brinner för skapa nya saker som hjälper individer eller företag att lösa deras problem på det digitala planen. Vi älskar att skapa en User vänlig Design, samt funktonell App Hemsida.</p>
+            </div>
+        </div>
+    </section>
     <section id="portfolio" class=" max-w-[1240px] h-screen">
 
     </section>
