--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
     />
   </head>
   <body>
-   
     <navbar
-      class=" fixed left-0 top-0 w-full z-10 ease-in duration-300"
+      class="fixed left-0 top-0 w-full z-10 ease-in duration-300"
       id="navbar"
     >
-      
-      <div class=" text-gray-300 flex max-w-[1240px] m-auto justify-between items-center p-6" id="nav-text">
-        <div class=" font-bold text-xl">DiagTech-Webb</div>
-        <ul class=" hidden sm:flex justify-around items-center">
+      <div
+        class="text-gray-300 flex max-w-[1240px] m-auto justify-between items-center p-6"
+        id="nav-text"
+      >
+        <div class="font-bold text-xl">DiagTech-Webb</div>
+        <ul class="hidden sm:flex justify-around items-center">
           <li class="mx-2 uppercase">hem</li>
           <li class="mx-2 uppercase">om oss</li>
           <li class="mx-2 uppercase">Tjänster</li>
@@ -30,7 +31,7 @@
           <li class="mx-2 uppercase">Kontakt</li>
         </ul>
         <!--Mobile menu-->
-        <div class=" block sm:hidden z-10 cursor-pointer" id="menu-button">
+        <div class="block sm:hidden z-10 cursor-pointer" id="menu-button">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -48,14 +49,37 @@
             <line x1="3" y1="18" x2="21" y2="18"></line>
           </svg>
         </div>
-        <div class=" flex absolute top-0 left-[-100%] right-0 bottom-0 justify-center items-center w-full h-screen bg-black/90 text-center ease-in duration-300" id="menu">
-            <ul>
-                <li class=" p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase">hem</li>
-                <li class=" p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase">om oss</li>
-                <li class=" p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase">Tjänster</li>
-                <li class=" p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase">Portfolio</li>
-                <li class=" p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase">Kontakt</li>
-              </ul>
+        <div
+          class="flex absolute top-0 left-[-100%] right-0 bottom-0 justify-center items-center w-full h-screen bg-black/90 text-center ease-in duration-300"
+          id="menu"
+        >
+          <ul>
+            <li
+              class="p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase"
+            >
+              hem
+            </li>
+            <li
+              class="p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase"
+            >
+              om oss
+            </li>
+            <li
+              class="p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase"
+            >
+              Tjänster
+            </li>
+            <li
+              class="p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase"
+            >
+              Portfolio
+            </li>
+            <li
+              class="p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase"
+            >
+              Kontakt
+            </li>
+          </ul>
         </div>
       </div>
     </navbar>
@@ -65,85 +89,130 @@
       <div
         class="absolute top-0 left-0 right-0 bottom-0 bg-black/70 z-[2]"
       ></div>
-      <div class="p-5 text-white z-[2] ml-[-1rem] mt-[12rem] sm:ml-[-9rem] md:ml-[-18rem]">
+      <div
+        class="p-5 text-white z-[2] ml-[-1rem] mt-[12rem] sm:ml-[-9rem] md:ml-[-18rem]"
+      >
         <h1 class="text-5xl sm:text-7xl font-bold p-1">DiagTech</h1>
         <h2 class="py-5 text-2xl p-1">Webbutveckling</h2>
         <p>Webbyrå med fokus på webbutveckling,</p>
         <p>SEO, hosting, förvaltning och support.</p>
       </div>
     </main>
-    <section id="about" class=" w-full h-screen flex justify-center items-center">
-        <div class=" w-[1240px] h-[700px]  shadow-2xl bg-fuchsia-50 sm:m-2">
-            <div class=" w-full h-[320px] bg-center bg-cover card-img ">
-                
-            </div>
-            <div>
-                <h2 class=" p-4 text-3xl font-bold uppercase text-gray-600">Vilka är vi.</h2>
-                <p class=" p-4">DiagTech-Webbutveckling är ett ny startad företag av personer som brinner för skapa nya saker som hjälper individer eller företag att lösa deras problem på det digitala planen. Vi älskar att skapa en User vänlig Design, samt funktonell App Hemsida.</p>
-            </div>
+    <section
+      id="about"
+      class="w-full h-screen flex justify-center items-center"
+    >
+      <div class="w-[1240px] h-[700px] shadow-2xl bg-fuchsia-50 sm:m-2">
+        <div class="w-full h-[320px] bg-center bg-cover card-img"></div>
+        <div>
+          <h2 class="p-8 sm:p-16 text-3xl font-bold uppercase text-gray-700">
+            Vilka är vi.
+          </h2>
+          <p class="py-4 px-4 sm:px-20 my-8">
+            DiagTech-Webbutveckling är ett ny startad företag av personer som
+            brinner för skapa nya saker som hjälper individer eller företag att
+            lösa deras problem på det digitala planen. Vi älskar att skapa en
+            User vänlig Design, samt funktonell App Hemsida.
+          </p>
         </div>
+      </div>
     </section>
-    <section id="portfolio" class=" max-w-[1240px] h-screen">
-
+    <section
+      id="services"
+      class="w-full h-screen flex justify-center items-center bg-center bg-fixed bg-cover services-img"
+    >
+      <div
+        class="w-[1240px] min-h-[500px] shadow-2xl flex flex-col text-white bg-black/70"
+      >
+        <div class="w-full sm:flex justify-evenly items-center">
+          <button
+            class="bg-gray-400/20 hover:bg-black/50 ease-in duration-300 w-full h-36 cursor-pointer active:bg-black/60 focus:bg-black/40"
+          >
+            <h2 class="p-6 mt-4">Webbutveckling</h2>
+          </button>
+          <button
+            class="bg-gray-400/20 hover:bg-black/50 ease-in duration-300 w-full h-36 cursor-pointer active:bg-black/60 focus:bg-black/40"
+          >
+            <h2 class="p-6 mt-4">Design & UX</h2>
+          </button>
+          <button
+            class="bg-gray-400/20 hover:bg-black/50 ease-in duration-300 w-full h-36 cursor-pointer active:bg-black/60 focus:bg-black/40"
+          >
+            <h2 class="p-6 mt-4">Hosting & förvaltning</h2>
+          </button>
+          <button
+            class="bg-gray-400/20 hover:bg-black/50 ease-in duration-300 w-full h-36 cursor-pointer active:bg-black/60 focus:bg-black/40"
+          >
+            <h2 class="p-6 mt-4">SEO Marknadsföring</h2>
+          </button>
+        </div>
+        <div class=" ">
+          <p class=" p-8">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis, quis delectus. Nobis, quidem ad magni cum perspiciatis soluta libero officiis mollitia quod, ab illo reiciendis dicta. Sunt ea totam, provident ab consectetur dolorem? Temporibus nulla autem molestias eos recusandae voluptatibus voluptates itaque adipisci accusantium, voluptatem eveniet libero. Quibusdam, iure ab eos temporibus quo laboriosam cum placeat non minima sapiente saepe.</p>
+          <p class=" p-8">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis, quis delectus. Nobis, quidem ad magni cum perspiciatis soluta libero officiis mollitia quod, ab illo reiciendis dicta. Sunt ea totam, provident ab consectetur dolorem? Temporibus nulla autem molestias eos recusandae voluptatibus voluptates itaque adipisci accusantium, voluptatem eveniet libero. Quibusdam, iure ab eos temporibus quo laboriosam cum placeat non minima sapiente saepe.</p>
+        </div>
+      </div>
     </section>
-    <footer class=" sm:flex max-w-[1240px] mx-auto items-center justify-around h-20">
-        <div class="flex items-center justify-center">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            class="feather feather-map-pin"
-          >
-            <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
-            <circle cx="12" cy="10" r="3"></circle>
-          </svg>
-          <p class="mx-2">Högseröd 531<br />241-62 Löberöd</p>
-        </div>
-        <div class="flex items-center justify-center">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            class="feather feather-phone"
-          >
-            <path
-              d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"
-            ></path>
-          </svg>
-          <p class="mx-2">+46702060923</p>
-        </div>
-        <div class="flex items-center justify-center">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            class="feather feather-mail"
-          >
-            <path
-              d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
-            ></path>
-            <polyline points="22,6 12,13 2,6"></polyline>
-          </svg>
-          <p class="mx-2">info@diagtech.se</p>
-        </div>
+    <section id="portfolio" class="max-w-[1240px] h-screen"></section>
+    <footer
+      class="sm:flex max-w-[1240px] mx-auto items-center justify-around h-20"
+    >
+      <div class="flex items-center justify-center">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="feather feather-map-pin"
+        >
+          <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
+          <circle cx="12" cy="10" r="3"></circle>
+        </svg>
+        <p class="mx-2">Högseröd 531<br />241-62 Löberöd</p>
+      </div>
+      <div class="flex items-center justify-center">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="feather feather-phone"
+        >
+          <path
+            d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"
+          ></path>
+        </svg>
+        <p class="mx-2">+46702060923</p>
+      </div>
+      <div class="flex items-center justify-center">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="feather feather-mail"
+        >
+          <path
+            d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
+          ></path>
+          <polyline points="22,6 12,13 2,6"></polyline>
+        </svg>
+        <p class="mx-2">info@diagtech.se</p>
+      </div>
     </footer>
     <script src="script.js"></script>
   </body>
