--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
       >
         <div class="font-bold text-xl">DiagTech-Webb</div>
         <ul class="hidden sm:flex justify-around items-center">
-          <li class="mx-2 uppercase">hem</li>
-          <li class="mx-2 uppercase">om oss</li>
-          <li class="mx-2 uppercase">Tjänster</li>
-          <li class="mx-2 uppercase">Portfolio</li>
-          <li class="mx-2 uppercase">Kontakt</li>
+          <li class="mx-2 uppercase"><a href="#">hem</a></li>
+          <li class="mx-2 uppercase"><a href="#about">om oss</a></li>
+          <li class="mx-2 uppercase"><a href="#services">Tjänster</a></li>
+          <li class="mx-2 uppercase"><a href="#projects">Portfolio</a></li>
+          <li class="mx-2 uppercase"><a href="#contact">Kontakt</a></li>
         </ul>
         <!--Mobile menu-->
         <div class="block sm:hidden z-10 cursor-pointer" id="menu-button">
@@ -53,31 +53,31 @@
           class="flex absolute top-0 left-[-100%] right-0 bottom-0 justify-center items-center w-full h-screen bg-black/90 text-center ease-in duration-300"
           id="menu"
         >
-          <ul>
+          <ul id="links">
             <li
               class="p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase"
             >
-              hem
+            <a href="#">hem</a>
             </li>
             <li
               class="p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase"
             >
-              om oss
+            <a href="#about">om oss</a>
             </li>
             <li
               class="p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase"
             >
-              Tjänster
+            <a href="#services">Tjänster</a>
             </li>
             <li
               class="p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase"
             >
-              Portfolio
+            <a href="#projects">Portfolio</a>
             </li>
             <li
               class="p-4 text-4xl hover:text-gray-500 cursor-pointer uppercase"
             >
-              Kontakt
+            <a href="#contact">Kontakt</a>
             </li>
           </ul>
         </div>
@@ -119,40 +119,162 @@
     </section>
     <section
       id="services"
-      class="w-full h-screen flex justify-center items-center bg-center bg-fixed bg-cover services-img"
+      class="w-full h-full lg:h-screen flex justify-center items-center bg-center bg-fixed bg-cover services-img"
     >
       <div
-        class="w-[1240px] min-h-[500px] shadow-2xl flex flex-col text-white bg-black/70"
+        class="w-[1240px] h-auto lg:h-[400px] shadow-2xl flex flex-col text-white bg-black/70 mt-36"
       >
-        <div class="w-full sm:flex justify-evenly items-center">
+        <div class="w-full lg:flex justify-evenly items-center">
           <button
-            class="bg-gray-400/20 hover:bg-black/50 ease-in duration-300 w-full h-36 cursor-pointer active:bg-black/60 focus:bg-black/40"
+            id="btn" class="bg-gray-400/20 hover:bg-black/50 ease-in duration-300 w-full sm:h-34 cursor-pointer active:bg-black/60 focus:bg-black/40"
           >
-            <h2 class="p-6 mt-4">Webbutveckling</h2>
+            <h2 class="p-4 sm:p-6 sm:mt-4">Webbutveckling</h2>
           </button>
           <button
-            class="bg-gray-400/20 hover:bg-black/50 ease-in duration-300 w-full h-36 cursor-pointer active:bg-black/60 focus:bg-black/40"
+            id="btn" class="bg-gray-400/20 hover:bg-black/50 ease-in duration-300 w-full sm:h-34 cursor-pointer active:bg-black/60 focus:bg-black/40"
           >
-            <h2 class="p-6 mt-4">Design & UX</h2>
+            <h2 class="p-4 sm:p-6 sm:mt-4">Design & UX</h2>
           </button>
           <button
-            class="bg-gray-400/20 hover:bg-black/50 ease-in duration-300 w-full h-36 cursor-pointer active:bg-black/60 focus:bg-black/40"
+            id="btn" class="bg-gray-400/20 hover:bg-black/50 ease-in duration-300 w-full sm:h-34 cursor-pointer active:bg-black/60 focus:bg-black/40"
           >
-            <h2 class="p-6 mt-4">Hosting & förvaltning</h2>
+            <h2 class="p-4 sm:p-6 sm:mt-4">Hosting & förvaltning</h2>
           </button>
           <button
-            class="bg-gray-400/20 hover:bg-black/50 ease-in duration-300 w-full h-36 cursor-pointer active:bg-black/60 focus:bg-black/40"
+            id="btn" class="bg-gray-400/20 hover:bg-black/50 ease-in duration-300 w-full sm:h-34 cursor-pointer active:bg-black/60 focus:bg-black/40"
           >
-            <h2 class="p-6 mt-4">SEO Marknadsföring</h2>
+            <h2 class="p-4 sm:p-6 sm:mt-4">SEO Marknadsföring</h2>
           </button>
         </div>
         <div class=" ">
-          <p class=" p-8">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis, quis delectus. Nobis, quidem ad magni cum perspiciatis soluta libero officiis mollitia quod, ab illo reiciendis dicta. Sunt ea totam, provident ab consectetur dolorem? Temporibus nulla autem molestias eos recusandae voluptatibus voluptates itaque adipisci accusantium, voluptatem eveniet libero. Quibusdam, iure ab eos temporibus quo laboriosam cum placeat non minima sapiente saepe.</p>
-          <p class=" p-8">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis, quis delectus. Nobis, quidem ad magni cum perspiciatis soluta libero officiis mollitia quod, ab illo reiciendis dicta. Sunt ea totam, provident ab consectetur dolorem? Temporibus nulla autem molestias eos recusandae voluptatibus voluptates itaque adipisci accusantium, voluptatem eveniet libero. Quibusdam, iure ab eos temporibus quo laboriosam cum placeat non minima sapiente saepe.</p>
+          <p id="info" class=" py-6 px-4 ">Våra medarbetare på DiagTech kan hjäpla dig med ovanstående tjänster.<br>Klicka för mer info </p>
+          <div id="webb" class=" grid md:grid-cols-2 lg:grid-cols-4 gap-8 hidden">
+            <div class=" p-6 shadow-xl rounded-xl ">
+              <div class=" grid grid-cols-2 gap-4 justify-center items-center">
+                <div class=" m-auto">
+                  <Image
+                    src='/images/html.png'
+                    alt=" Html icon"
+                    width="64px"
+                    height="64px"
+                  />
+                </div>
+                <div class=" flex flex-col items-center justify-center">
+                  <h3>HTML</h3>
+                </div>
+              </div>
+            </div>
+            <div class=" p-6 shadow-xl rounded-xl ">
+              <div class=" grid grid-cols-2 gap-4 justify-center items-center">
+                <div class=" m-auto">
+                  <Image
+                    src='/images/css.png'
+                    alt=" Css icon"
+                    width="64px"
+                    height="64px"
+                  />
+                </div>
+                <div class=" flex flex-col items-center justify-center">
+                  <h3>CSS</h3>
+                </div>
+              </div>
+            </div>
+            <div class=" p-6 shadow-xl rounded-xl ">
+              <div class=" grid grid-cols-2 gap-4 justify-center items-center">
+                <div class=" m-auto">
+                  <Image
+                    src='/images/javascript.png'
+                    alt=" Javascript icon"
+                    width="64px"
+                    height="64px"
+                  />
+                </div>
+                <div class=" flex flex-col items-center justify-center">
+                  <h3>JavaScript</h3>
+                </div>
+              </div>
+            </div>
+            <div class=" p-6 shadow-xl rounded-xl ">
+              <div class=" grid grid-cols-2 gap-4 justify-center items-center">
+                <div class=" m-auto">
+                  <Image
+                    src='/images/react.png'
+                    alt=" React icon"
+                    width="64px"
+                    height="64px"
+                  />
+                </div>
+                <div class=" flex flex-col items-center justify-center">
+                  <h3>React</h3>
+                </div>
+              </div>
+            </div>
+            <div class=" p-6 shadow-xl rounded-xl ">
+              <div class=" grid grid-cols-2 gap-4 justify-center items-center">
+                <div class=" m-auto">
+                  <Image
+                    src='/images/nextjs.png'
+                    alt=" Next.js icon"
+                    width="64px"
+                    height="64px"
+                  />
+                </div>
+                <div class=" flex flex-col items-center justify-center">
+                  <h3>NextJs</h3>
+                </div>
+              </div>
+            </div>
+            <div class=" p-6 shadow-xl rounded-xl ">
+              <div class=" grid grid-cols-2 gap-4 justify-center items-center">
+                <div class=" m-auto">
+                  <Image
+                    src='/images/node.png'
+                    alt=" Node.js icon"
+                    width="64px"
+                    height="64px"
+                  />
+                </div>
+                <div class=" flex flex-col items-center justify-center">
+                  <h3>NodeJs</h3>
+                </div>
+              </div>
+            </div>
+            <div class=" p-6 shadow-xl rounded-xl ">
+              <div class=" grid grid-cols-2 gap-4 justify-center items-center">
+                <div class=" m-auto">
+                  <Image
+                    src='/images/firebase.png'
+                    alt=" Firebase icon"
+                    width="64px"
+                    height="64px"
+                  />
+                </div>
+                <div class=" flex flex-col items-center justify-center">
+                  <h3>FIREBASE</h3>
+                </div>
+              </div>
+            </div>
+            <div class=" p-6 shadow-xl rounded-xl ">
+              <div class=" grid grid-cols-2 gap-4 justify-center items-center">
+                <div class=" m-auto">
+                  <Image
+                    src='/images/tailwind.png'
+                    alt=" Tailwind icon"
+                    width="64px"
+                    height="64px"
+                  />
+                </div>
+                <div class=" flex flex-col items-center justify-center">
+                  <h3>Tailwind</h3>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+        
       </div>
     </section>
-    <section id="portfolio" class="max-w-[1240px] h-screen"></section>
+    <section id="projects" class="max-w-[1240px] h-screen"></section>
     <footer
       class="sm:flex max-w-[1240px] mx-auto items-center justify-around h-20"
     >
