Function serviceInfoToggler ready but dry

--- a/index.html
+++ b/index.html
@@ -147,8 +147,19 @@
           </button>
         </div>
         <div class=" ">
-          <p id="info" class=" py-6 px-4 ">Våra medarbetare på DiagTech kan hjäpla dig med ovanstående tjänster.<br>Klicka för mer info </p>
-          <div id="webb" class=" grid md:grid-cols-2 lg:grid-cols-4 gap-8 hidden">
+          <p id="info" class=" text-center text-2xl py-16 px-4 ">Våra medarbetare på DiagTech kan hjäpla dig med ovanstående tjänster.</p>
+          <div id="design" class=" hidden">
+            <p class=" text-center py-6 px-4 text-xl  ">På design och UX avdelningen använder vi oss av Figma och Ilustrator</p>
+          </div>
+          <div id="hosting" class=" hidden">
+            <p class=" text-center py-6 px-4 text-xl  ">På Hosting avdelningen hjälper vi dig med webbhotel förvaltning och service.</p>
+          </div>
+          <div id="ceo" class=" hidden">
+            <p class=" text-center py-6 px-4  text-xl ">På CEO avdelningen optimerar vi din sida så att den hamnar högst i sökningar</p>
+          </div>
+          <div id="webb" class=" hidden">
+            <p class="text-center p-4 text-xl">Vi använder nädanstående verktyg för att bygga hemsida eller webb app</p>
+          <div  class=" grid md:grid-cols-2 lg:grid-cols-4 gap-8 ">
             <div class=" p-6 shadow-xl rounded-xl ">
               <div class=" grid grid-cols-2 gap-4 justify-center items-center">
                 <div class=" m-auto">
@@ -270,6 +281,7 @@
               </div>
             </div>
           </div>
+        </div>
         </div>
         
       </div>
