--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               <div class=" grid grid-cols-2 gap-4 justify-center items-center">
                 <div class=" m-auto">
                   <Image
-                    src='/images/html.png'
+                    src='./images/html.png'
                     alt=" Html icon"
                     width="64px"
                     height="64px"
@@ -179,7 +179,7 @@
               <div class=" grid grid-cols-2 gap-4 justify-center items-center">
                 <div class=" m-auto">
                   <Image
-                    src='/images/css.png'
+                    src='./images/css.png'
                     alt=" Css icon"
                     width="64px"
                     height="64px"
@@ -194,7 +194,7 @@
               <div class=" grid grid-cols-2 gap-4 justify-center items-center">
                 <div class=" m-auto">
                   <Image
-                    src='/images/javascript.png'
+                    src='./images/javascript.png'
                     alt=" Javascript icon"
                     width="64px"
                     height="64px"
@@ -209,7 +209,7 @@
               <div class=" grid grid-cols-2 gap-4 justify-center items-center">
                 <div class=" m-auto">
                   <Image
-                    src='/images/react.png'
+                    src='./images/react.png'
                     alt=" React icon"
                     width="64px"
                     height="64px"
@@ -224,7 +224,7 @@
               <div class=" grid grid-cols-2 gap-4 justify-center items-center">
                 <div class=" m-auto">
                   <Image
-                    src='/images/nextjs.png'
+                    src='./images/nextjs.png'
                     alt=" Next.js icon"
                     width="64px"
                     height="64px"
@@ -239,7 +239,7 @@
               <div class=" grid grid-cols-2 gap-4 justify-center items-center">
                 <div class=" m-auto">
                   <Image
-                    src='/images/node.png'
+                    src='./images/node.png'
                     alt=" Node.js icon"
                     width="64px"
                     height="64px"
@@ -254,7 +254,7 @@
               <div class=" grid grid-cols-2 gap-4 justify-center items-center">
                 <div class=" m-auto">
                   <Image
-                    src='/images/firebase.png'
+                    src='./images/firebase.png'
                     alt=" Firebase icon"
                     width="64px"
                     height="64px"
@@ -269,7 +269,7 @@
               <div class=" grid grid-cols-2 gap-4 justify-center items-center">
                 <div class=" m-auto">
                   <Image
-                    src='/images/tailwind.png'
+                    src='./images/tailwind.png'
                     alt=" Tailwind icon"
                     width="64px"
                     height="64px"
