--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
       </div>
     </navbar>
     <main
-      class="flex items-center justify-center h-screen bg-fixed bg-center bg-cover custom-img w-full"
+      class="flex items-center justify-center h-screen bg-center md:bg-fixed bg-cover custom-img w-full"
     >
       <div
         class="absolute top-0 left-0 right-0 bottom-0 bg-black/70 z-[2]"
       ></div>
       <div
-        class="p-5 text-white z-[2] ml-[-1rem] mt-[12rem] sm:ml-[-9rem] md:ml-[-18rem]"
+        class="p-5 text-white z-[2] ml-[-1rem] mt-[12rem] sm:ml-[-9rem] md:ml-[-18rem] "
       >
         <h1 class="text-5xl sm:text-7xl font-bold p-1">DiagTech</h1>
         <h2 class="py-5 text-2xl p-1">Webbutveckling</h2>
@@ -100,9 +100,9 @@
     </main>
     <section
       id="about"
-      class="w-full h-screen flex justify-center items-center"
+      class="w-full h-screen flex justify-center items-center z-10"
     >
-      <div class="w-[1240px] h-[700px] shadow-2xl bg-fuchsia-50 sm:m-2">
+      <div class="w-[1240px] h-[700px] shadow-2xl bg-fuchsia-50 sm:m-2 z-10">
         <div class="w-full h-[320px] bg-center bg-cover card-img"></div>
         <div>
           <h2 class="p-8 sm:p-16 text-3xl font-bold uppercase text-gray-700">
@@ -119,7 +119,7 @@
     </section>
     <section
       id="services"
-      class="w-full h-full lg:h-screen flex justify-center items-center bg-center bg-fixed bg-cover services-img"
+      class="w-full h-full lg:h-screen flex justify-center items-center bg-center md:bg-fixed bg-cover services-img"
     >
       <div
         class="w-[1240px] h-auto lg:h-[400px] shadow-2xl flex flex-col text-white bg-black/70 mt-36"
