--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>
     </navbar>
     <main
-      class="flex items-center justify-center h-screen bg-fixed bg-center bg-cover custom-img w-full"
+      class="flex items-center justify-center h-screen md:bg-fixed bg-center bg-cover custom-img w-full"
     >
       <div
         class="absolute top-0 left-0 right-0 bottom-0 bg-black/70 z-[2]"
