Removed overlay and added multiplay mode

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
     <main
       class="flex items-center justify-center h-screen md:bg-fixed bg-center bg-cover custom-img w-full"
     >
-      <div
+      <!-- <div
         class="absolute top-0 left-0 right-0 bottom-0 bg-black/70 z-[2]"
-      ></div>
+      ></div> -->
       <div
         class="p-5 text-white z-[2] ml-[-1rem] mt-[12rem] sm:ml-[-9rem] md:ml-[-18rem] "
       >
