--- a/index.html
+++ b/index.html
@@ -25,27 +25,27 @@
         <div class="font-bold text-xl underline">DiagTech</div>
         <ul class="hidden sm:flex justify-around items-center">
           <li
-            class="mx-2 uppercase hover:text-orange-500 hover:text-lg ease-in duration-300"
+            class="mx-2 uppercase hover:text-orange-500  ease-in duration-300"
           >
             <a href="#">hem</a>
           </li>
           <li
-            class="mx-2 uppercase hover:text-orange-500 hover:text-lg ease-in duration-300"
+            class="mx-2 uppercase hover:text-orange-500  ease-in duration-300"
           >
             <a href="#about">om oss</a>
           </li>
           <li
-            class="mx-2 uppercase hover:text-orange-500 hover:text-lg ease-in duration-300"
+            class="mx-2 uppercase hover:text-orange-500  ease-in duration-300"
           >
             <a href="#services">Tjänster</a>
           </li>
           <li
-            class="mx-2 uppercase hover:text-orange-500 hover:text-lg ease-in duration-300"
+            class="mx-2 uppercase hover:text-orange-500  ease-in duration-300"
           >
             <a href="#projects">Portfolio</a>
           </li>
           <li
-            class="mx-2 uppercase hover:text-orange-500 hover:text-lg ease-in duration-300"
+            class="mx-2 uppercase hover:text-orange-500  ease-in duration-300"
           >
             <a href="#contact">Kontakt</a>
           </li>
@@ -201,24 +201,30 @@
       id="projects"
       class="w-full h-screen bg-white flex flex-col justify-center items-center"
     >
-      <h2 class=" uppercase md:text-xl font-bold text-gray-600 p-2">urval kunder som har använd oss</h2>
+      <h2 class="uppercase md:text-xl font-bold text-gray-600 p-2">
+        urval kunder som har använd oss
+      </h2>
       <div class="carousel max-w-[1240px] shadow-2xl">
         <div class="carousel-item carousel-item-visible">
           <img src="images/Bella.jpg" alt="" />
           <div class="carousel-text">
-            <a href="https://bellasdad.se"><h1 class=" bg-black/20  px-4 py-2 rounded-lg">Besök sidan</h1></a>
+            <a href="https://bellasdad.se"
+              ><h1 class="bg-black/20 px-4 py-2 rounded-lg">Besök sidan</h1></a
+            >
           </div>
         </div>
         <div class="carousel-item">
           <img src="images/skanor.jpg" alt="" />
           <div class="carousel-text">
-            <a href="https://skanorsservice.se"><h1 class=" bg-black/20  px-4 py-2 rounded-lg">Besök sidan</h1></a>
+            <a href="https://skanorsservice.se"
+              ><h1 class="bg-black/20 px-4 py-2 rounded-lg">Besök sidan</h1></a
+            >
           </div>
         </div>
         <div class="carousel-item">
           <img src="images/keto.jpg" alt="" />
           <div class="carousel-text">
-            <h1 class=" bg-black/20  px-4 py-2 rounded-lg">Besök sidan</h1>
+            <h1 class="bg-black/20 px-4 py-2 rounded-lg">Besök sidan</h1>
           </div>
         </div>
         <div class="carousel-actions">
@@ -226,6 +232,90 @@
             <
           </button>
           <button id="carousel-button-next" aria-label="Next slide">></button>
+        </div>
+      </div>
+    </section>
+    <section id="contact" class="max-w-[1240px] m-auto px-2 py-16 w-full">
+      <div class="grid lg:grid-cols-5 gap-8">
+        <div
+          class="col-span-3 lg:col-span-2 w-full h-full shadow-xl shadow-gray-400 rounded-xl p-4"
+        >
+          <div class="lg:p-4 h-full">
+            <div>
+              <image
+                class="rounded-xl hover:scale-105 ease-in duration-300"
+                src="./images/consulting.png"
+                alt="/"
+              />
+            </div>
+            <div class=" text-xl">
+              <h2 class="py-2">Kontakta oss</h2>
+              <p class="py-4">
+                Vill ni komma i kontakt med oss? Då kan ni ringa, eller skriv
+                genom formuler nedan, så återkommer vi när det passar er bäst.
+              </p>
+              <div>
+                <p class="uppercase pt-8">Tel +46 702060923</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="col-span-3 w-full h-auto shadow-xl shadow-gray-400 rounded-xl lg:p-4 bg-blue-50 p-4"
+        >
+          <form
+            action="https://getform.io/f/bbd9738e-6414-40b1-871a-51ea1b47b694"
+            method="POST"
+            enctype="multipart/form-data"
+          >
+            <div class="grid md:grid-cols-2 gap-4 w-full py-2">
+              <div class="flex flex-col">
+                <label class="uppercase text-sm py-2">Name</label>
+                <input
+                  class="border-2 rounded-lg p-3 flex border-gray-300"
+                  type="text"
+                  name="name"
+                />
+              </div>
+              <div class="flex flex-col">
+                <label class="uppercase text-sm py-2"> Phone Number </label>
+                <input
+                  class="border-2 rounded-lg p-3 flex border-gray-300"
+                  type="text"
+                  name="phone"
+                />
+              </div>
+            </div>
+            <div class="flex flex-col py-2">
+              <label class="uppercase text-sm py-2">Email</label>
+              <input
+                class="border-2 rounded-lg p-3 flex border-gray-300"
+                type="email"
+                name="email"
+              />
+            </div>
+            <div class="flex flex-col py-2">
+              <label class="uppercase text-sm py-2">Subject</label>
+              <input
+                class="border-2 rounded-lg p-3 flex border-gray-300"
+                type="text"
+                name="subject"
+              />
+            </div>
+            <div class="flex flex-col py-2">
+              <label class="uppercase text-sm py-2">Message</label>
+              <textarea
+                class="border-2 rounded-lg p-3 border-gray-300"
+                rows="10"
+                name="message"
+              ></textarea>
+            </div>
+            <button
+              class="w-full p-4 text-gray-100 bg-blue-500 mt-4 rounded-xl text-xl uppercase"
+            >
+              Send Message
+            </button>
+          </form>
         </div>
       </div>
     </section>
