ServiceInfotoggler refactored and added new text to site

--- a/index.html
+++ b/index.html
@@ -24,29 +24,19 @@
       >
         <div class="font-bold text-xl underline">DiagTech</div>
         <ul class="hidden sm:flex justify-around items-center">
-          <li
-            class="mx-2 uppercase hover:text-orange-500  ease-in duration-300"
-          >
+          <li class="mx-2 uppercase hover:text-orange-500 ease-in duration-300">
             <a href="#">hem</a>
           </li>
-          <li
-            class="mx-2 uppercase hover:text-orange-500  ease-in duration-300"
-          >
+          <li class="mx-2 uppercase hover:text-orange-500 ease-in duration-300">
             <a href="#about">om oss</a>
           </li>
-          <li
-            class="mx-2 uppercase hover:text-orange-500  ease-in duration-300"
-          >
+          <li class="mx-2 uppercase hover:text-orange-500 ease-in duration-300">
             <a href="#services">Tjänster</a>
           </li>
-          <li
-            class="mx-2 uppercase hover:text-orange-500  ease-in duration-300"
-          >
+          <li class="mx-2 uppercase hover:text-orange-500 ease-in duration-300">
             <a href="#projects">Portfolio</a>
           </li>
-          <li
-            class="mx-2 uppercase hover:text-orange-500  ease-in duration-300"
-          >
+          <li class="mx-2 uppercase hover:text-orange-500 ease-in duration-300">
             <a href="#contact">Kontakt</a>
           </li>
         </ul>
@@ -123,21 +113,29 @@
         <div class="w-full h-[300px] bg-center bg-cover card-img"></div>
         <div class="sm:p-20 text-gray-700">
           <h2 class="p-4 text-3xl font-bold uppercase">Vilka är vi.</h2>
-          <p class="p-6">
-            DiagTech-Webbutveckling är ett ny startad företag av personer som
-            brinner för att skapa nya lösningar som hjälper individer eller
-            företag att lösa deras problem på det digitala planen. Vi älskar att
-            skapa en User vänlig Design, samt funktonella Appar eller Hemsidor.
+          <p class="p-4">
+            DiagTech-Webbutveckling är ett företag bestående av personer som
+            brinner för sitt arbete. Vi gillar utmaningar, och att skapa nya
+            lösningar som hjälper individer eller företag att lösa deras problem
+            på det digitala planen. Vi älskar att skapa en användarvänlig
+            Design, samt funktonella Appar eller Hemsidor.
+          </p>
+          <p class="p-4">
+            Så letar du efter ett pålitligt team som kan hjälpa dig med att
+            skapa en modern, användarvänlig och snabb webbplats eller app? Då är
+            vi rätt företag för dig! Vi kan webbutveckling och använder oss av
+            de senaste verktygen och teknologierna för att skapa fantastiska
+            webbplatser och appar.
           </p>
         </div>
       </div>
     </section>
     <section
       id="services"
-      class="w-full h-full lg:h-screen flex justify-center items-center bg-center md:bg-fixed bg-cover services-img"
+      class="w-full lg:h-screen flex justify-center items-center bg-center md:bg-fixed bg-cover services-img"
     >
       <div
-        class="w-[1240px] h-auto lg:h-[400px] shadow-2xl flex flex-col text-white mt-36"
+        class="w-[1240px] h-full lg:h-[460px] shadow-2xl flex flex-col text-white mt-36"
       >
         <div class="w-full lg:flex justify-evenly items-center">
           <button
@@ -165,33 +163,60 @@
             <h2 class="p-4 sm:p-6 sm:mt-4">SEO Marknadsföring</h2>
           </button>
         </div>
-        <div class=" ">
-          <p id="info" class="text-center text-2xl py-16 px-4">
-            Våra medarbetare på DiagTech kan hjäpla dig med ovanstående
-            tjänster.
-          </p>
+        <div class="h-full bg-amber-900/30">
+          <div id="info">
+            <p class="text-center py-16 p-6 md:px-16 md:text-xl leading-8 tracking-widest">
+              Vi tar hand om allt från design och utveckling till optimering och underhåll av din webbplats eller app.
+              Våra medarbetare på DiagTech kan hjäpla dig med ovanstående
+              tjänster.
+            </p>
+            <p class="text-center text-xl p-8 sm:pt-14">
+              Klika på flicken för mer info.
+            </p>
+          </div>
           <div id="design" class="hidden">
-            <p class="text-center py-6 px-4 text-xl">
-              På design och UX avdelningen använder vi oss av Figma och
-              Ilustrator
+            <p
+              class="text-left py-16 p-6 md:px-16 md:text-xl leading-8 tracking-widest"
+            >
+              Är du på jakt efter en professionell design för din webbplats
+              eller app som kan ge en förstklassig användarupplevelse? Då har du
+              kommit till rätt ställe! Vi på DiagTech har erfarenhet av design
+              och UX och använder oss av de bästa verktygen för att skapa
+              imponerande visuella upplevelser för våra kunder. Vi använder
+              verktyg som Figma och Adobe Illustrator för att skapa moderna och
+              användarvänliga gränssnitt. Genom att använda Figma kan vi enkelt
+              samarbeta med dig på designprocessen och du kan följa arbetet i
+              realtid. Med Adobe Illustrator kan vi skapa högkvalitativ grafik
+              som ger din webbplats eller app en unik och professionell look.
             </p>
           </div>
           <div id="hosting" class="hidden">
-            <p class="text-center py-6 px-4 text-xl">
-              På Hosting avdelningen hjälper vi dig med webbhotel förvaltning
-              och service.
+            <p class="text-left py-16 p-6 md:px-16 md:text-xl leading-8 tracking-widest">
+              Att ha en pålitlig värd och en väl förvaltad webbplats är avgörande för en lyckad online-närvaro. Genom att använda en professionell hostingtjänst och en erfaren förvaltningspartner kan du säkerställa att din webbplats fungerar smidigt. Detta gör det möjligt för dig att fokusera på att driva ditt företag istället för att hantera tekniska problem.
             </p>
           </div>
           <div id="ceo" class="hidden">
-            <p class="text-center py-6 px-4 text-xl">
-              På CEO avdelningen optimerar vi din sida så att den hamnar högst i
-              sökningar
+            <p class="text-left py-16 p-6 md:px-16 md:text-xl leading-8 tracking-widest">
+              För att förbättra synligheten av din webbplats på sökmotorer måste
+              du optimera den för relevanta sökord och -fraser. Detta inkluderar
+              optimering av webbplatsens innehåll, länkprofil och tekniska
+              aspekter. Genom att implementera en effektiv
+              sökmotoroptimeringsstrategi kan du öka trafiken till din webbplats
+              och förbättra din online-närvaro.
             </p>
           </div>
           <div id="webb" class="hidden">
-            <p class="text-center p-4 text-xl">
-              Vi använder nädanstående verktyg för att bygga hemsida eller webb
-              app
+            <p
+              class="text-left py-16 px-6 md:px-16 md:text-xl leading-8 tracking-widest"
+            >
+              Letar du efter ett pålitligt team som kan hjälpa dig med att skapa
+              en modern, användarvänlig och snabb webbplats eller app? Då är vi
+              rätt företag för dig! Vi använder oss av de senaste verktygen och
+              teknologierna så som HTML, CSS, JavaScript, React, NextJS, Node
+              och Tailwind, vilket gör att vi kan erbjuda dig den bästa möjliga
+              lösningen för ditt företag. Oavsett om du behöver en enkel hemsida
+              eller en mer avancerad e-handelsplattform, så är vi här för att
+              hjälpa dig.
             </p>
           </div>
         </div>
@@ -202,7 +227,7 @@
       class="w-full h-screen bg-white flex flex-col justify-center items-center"
     >
       <h2 class="uppercase md:text-xl font-bold text-gray-600 p-2">
-        urval kunder som har använd oss
+        urval kunder som har använt oss
       </h2>
       <div class="carousel max-w-[1240px] shadow-2xl">
         <div class="carousel-item carousel-item-visible">
@@ -248,7 +273,7 @@
                 alt="/"
               />
             </div>
-            <div class=" text-xl">
+            <div class="text-xl text-gray-600">
               <h2 class="py-2">Kontakta oss</h2>
               <p class="py-4">
                 Vill ni komma i kontakt med oss? Då kan ni ringa, eller skriv
@@ -358,7 +383,6 @@
           ></path>
         </svg>
         <p class="mx-2">+46702060923</p>
-        
       </div>
       <div class="flex items-center justify-center p-4">
         <svg
@@ -380,7 +404,7 @@
         </svg>
         <p class="mx-2">info@diagtech.se</p>
       </div>
-      <p class=" text-center p-4">&copy; DiagTech 2023</p>
+      <p class="text-center p-4">&copy; DiagTech 2023</p>
     </footer>
     <script src="script.js"></script>
   </body>
